--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -43,7 +43,7 @@ block content
       td
         div 0.15mm layer height.
         div Primary color.
-        div Gyroid 10% infill.
+        div 10% gyroid infill.
         div 2 perimeters.
         div Very slow first layer.
     tr
@@ -52,7 +52,7 @@ block content
       td
         div 0.15mm layer height.
         div Primary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div Tight and loose variants available.
         div 2x units, mirrored.
     tr
@@ -61,7 +61,7 @@ block content
       td
         div 0.15mm layer height.
         div Primary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div 2x units.
     tr
       td: +preview('/static/manual/print_r4.png')
@@ -69,7 +69,7 @@ block content
       td
         div 0.15mm layer height.
         div Primary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div Tight and loose variants available.
         div 2x units, mirrored.
     tr
@@ -85,7 +85,7 @@ block content
       td
         div: em 0.07mm layer height.
         div Primary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div 4x units.
 
   h4 Secondary color / material
@@ -100,7 +100,7 @@ block content
       td
         div 0.15mm layer height.
         div Secondary color.
-        div Gyroid 10% infill.
+        div 10% gyroid infill.
         div 2 perimeters.
         div Very slow first layer.
     tr
@@ -121,7 +121,7 @@ block content
       td
         div: em 0.07mm layer height.
         div Secondary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div 4x units.
     tr
       td: +preview('/static/manual/print_dpad.png')
@@ -129,7 +129,7 @@ block content
       td
         div: em 0.07mm layer height.
         div Secondary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div 4x units.
     tr
       td: +preview('/static/manual/print_thumbstick.png')
@@ -137,7 +137,7 @@ block content
       td
         div: em 0.07mm layer height.
         div Secondary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div Custom supports.
         div See #[+a('#thumbstick') additional notes].
     tr
@@ -146,7 +146,7 @@ block content
       td
         div: em 0.07mm layer height.
         div Secondary color.
-        div Gyroid 15% infill.
+        div 15% gyroid infill.
         div Custom supports.
         div See #[+a('#home_button') additional notes].
     tr
@@ -171,6 +171,7 @@ block content
         div Electrically conductive material.
         div If using Protopasta: 245°C.
         div 3 perimeters.
+        div Tight and loose variants available.
 
   h4 Any color / recycled material
   table.manual.col3.hdiv
@@ -194,6 +195,7 @@ block content
         div 0.15mm layer height.
         div Any material / recycled.
         div Internal part.
+        div Consider using brim.
     tr
       td: +preview('/static/manual/print_stand.png')
       td Soldering stand
