--- a/src/pug/blog/report_14.pug
+++ b/src/pug/blog/report_14.pug
@@ -5,25 +5,23 @@ block append subtitle
 
 block content
   h2 Progress report #14
-  +news_header('19 June 2023', 'half_anniversary', '')
+  +news_header('29 June 2023', 'half_anniversary', '')
 
-  h3 Testing Alpha version of firmware with racing profile
-  p One of the upcoming features for the Alpakka is the support of racing profiles. The new firmware now takes data from the accelerometer into account to determine the direction of "down", in order to simulate a steering wheel-like behavior.
-  p This firmware version is currently being tested internally.
+  h3 Racing profile firmware beta and video
+  p One of the upcoming features for the Alpakka is the support of racing games. The new racing profile now takes data from the accelerometer into account to determine the direction of "down", in order to simulate a steering wheel-like behavior.
+  p Alpakka #[+ax(org.fw_release+'0.91.0-beta1') firmware 0.91.0-beta1] was released for testers to try it out, and a video was also published using the racing profile in #[+ax('https://www.youtube.com/watch?v=ENlxAJThBBk') Assetto Corsa Competizione] gameplay.
   hr
 
   h3 PCB in distribution channel
   p The last component of the Alpakka that was still missing from our distribution channel was the PCB. Those who responded to our questionnaire indicated that the need to purchase the PCB separately, the minimum number of PCBs to order, as well the associated cost were some of the biggest issues so far.
-  p Now we have remedied this situation and you can find the PCB #[+ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb') in our normal distribution channel], together with all the other components, necessary to assemble your very own Alpakka.
+  p Now we have remedied this situation and you can find the PCB in our #[+ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb') distribution channel], taking another step in the direction of making as easy as possible for everyone to build their own custom Alpakka.
   hr
-  
-  h3 Restructured models and instructions
-  p We have received many questions regarding the 3D printing of the Alpakka, which we wanted to address. We have now separated the 3D models (in the STL files) from the settings for printing them. This allows us to make modifications to the models independently and quickly provide a #[+ax('https://github.com/inputlabs/alpakka_case/releases/latest') new release].
-  p You can find the new, detailed settings and instructions #[+a('/alpakka/manual/diy_case') in the manual].
-  p We tried to find a way of providing suitable settings in the form of 3MF files, while still keeping those settings separate from the models. Unfortunately we found that certain settings, such as the supports for specific parts like the thumbstick require the model to be part of the 3MF file.
-  img(src='/static/manual/thumbstick.png').
-  p 3MF files and the settings for 3D printing parts are also very dependent on the used slicing program, and vary significantly between different printer models, or even individual printers and environments, as well as filaments. As a result, for now we focus on providing the models in the form of STL files, while providing comprehensive settings for their printing in the manual.
+
+  h3 Restructured 3D models and printing instructions
+  p We have received many questions regarding the 3D printing of the Alpakka, which we wanted to address. And based on the feedback from the community we have now restructured the STL files in the #[+ax(org.cad_release+'0.88.1') latest release], removed the bundles and 3MF files, and updated the manual.
+  p We tried to find a way of providing suitable settings in the form of 3MF files, while still keeping those settings separate from the models. Unfortunately we found that certain settings are very dependant on the printer model and slicer application used.
+  p Instead, the manual page for #[+a('/alpakka/manual/diy_case') 3D-printing instructions] has been updated, including specific notes for the most sensitive parts.
+  p Additionally, to support the new release structure effortlessly, we also created tooling for exporting Blender models to STL automatically.
   hr
 
   p Thanks a lot for the support! <br> - M&M <3
-
