--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -15,7 +15,7 @@ block content
       li: i "This controller will make you rethink what's possible in controllers"
       //- li: i "As you're learning to use this controller in a FPS, you will move and look around like a drunken monkey."
       li: i "With a little bit of practice you can get really precise and really good at these little, tiny, minute movements that you would usually get accustomed to with a mouse."
-      li: i "This might be a game changer"
+      //- li: i "This might be a game changer"
       li: i "You would definitely be running circles around people that are using the right thumbstick."
 
     li #[+ax('https://www.youtube.com/watch?v=GehkHsNhwGA') RambleCan] #[em (video)] Alpakka Dual Gyro Controller Impressions -【Warhammer 40k: Boltgun】
