--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_15') Progress report 15
     li: +a('report_14') Progress report 14
     li: +a('report_13') Progress report 13
     li: +a('report_12') Progress report 12
