--- a/src/pug/blog/report_14.pug
+++ b/src/pug/blog/report_14.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #14
-  +news_header('29 June 2023', 'half_anniversary', 'report-15')
+  +news_header('29 June 2023', 'half_anniversary', 'report_15')
 
   h3 Racing profile firmware beta and video
   p One of the upcoming features for the Alpakka is the support of racing games. The new racing profile now takes data from the accelerometer into account to determine the direction of "down", in order to simulate a steering wheel-like behavior.
