--- a/src/pug/blog/report_15.pug
+++ b/src/pug/blog/report_15.pug
@@ -17,7 +17,7 @@ block content
   h3 Work on wireless Alpakka
   p Our primary focus is currently on the development of the wireless version of the Alpakka.
   p The current plan for a first iteration is based on a 1200 mAh Lithium-Polymer battery that would have to be charged externally.
-  p Based on feedback from our testing community, the vast majority is using devices with Bluetooth 4 or 5 (or an unknown Bluetooth version) in their relevant environment. Initially we are experimenting with Bluetooth 4 and the HID profile, to get familiar with BT development on the Pico-W and to see what latencies we are viable. At a later stage we expect this to be optimized and to potentially use Bluethooth 5 and the HOG profile. It may even be necessary to use a dongle, or use a different wireless chipset and / or protocol.
+  p Based on feedback from our testing community, the vast majority is using devices with Bluetooth 4 or 5 (or an unknown Bluetooth version) in their relevant environment. Initially we are experimenting with Bluetooth 4 and the HID profile, to get familiar with BT development on the Pico-W and to see what latencies are viable. At a later stage we expect this to be optimized and to potentially use Bluethooth 5 and the HOG profile. It may even be necessary to use a dongle, or use a different wireless chipset and / or protocol.
   hr
 
   h3 New questionnaire
