Added racing profile

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -53,7 +53,7 @@ block page
           +wikilink('profile_console') Console
           +wikilink('profile_console_legacy') Console Legacy
           +wikilink('profile_desktop') Desktop
-          div.inactive Racing #[i (soon)]
+          +wikilink('profile_racing') Racing
           div.inactive Flight #[i (soon)]
           div.inactive RTS #[i (soon)]
 
