Added 5 new pics to the community gallery

--- a/src/pug/contribute/gallery_community.pug
+++ b/src/pug/contribute/gallery_community.pug
@@ -36,6 +36,11 @@ block page
       +boximg('/static/community/community_turq2.jpg')
       +boximg('/static/community/community_black_lime.jpg')
       +boximg('/static/community/community_black_blue.jpg')
+      +boximg('/static/community/community_purple_pink.jpg')
+      +boximg('/static/community/community_turq_mod.jpg')
+      +boximg('/static/community/community_holo.jpg')
+      +boximg('/static/community/community_white_red.jpg')
+      +boximg('/static/community/community_black_poly.jpg')
       +boximglink(
         '/static/img/alpakka_black_silver_top.jpg',
         '/alpakka/gallery',
