Added paragraph about scrollwheel usage

--- a/src/pug/alpakka/manual/profile_racing.pug
+++ b/src/pug/alpakka/manual/profile_racing.pug
@@ -9,6 +9,7 @@ block content
 
   p Made for racing (or driving) games as a replacement of a real steering wheel, so it is very recommended for simulation and simcade games such Assetto Corsa, Formula 1, Dirt Rally, Forza, Eurotruck Simulator, etc.
   p Depending on the game it might be better to switch to the #[+a('tune') Generic / DirectInput] mode, so the game takes the controller input as a generic steering wheel. As well as disabling in-game deadzone and any other kind of input filtering or assist.
+  p The scrollwheel is used to navigate the #[em MDF (Multi-Function Display)] in games featuring it, or alternatively setting the rotary to one of its alternative modes (using the 8-directional stick) and then using the scrollwheel to change settings directly such as #[em Traction Control], #[em ABS], #[em Brake Bias], or #[em Fuel Mix], etc.
   img.wide.mt(src='/static/manual/profile_racing.svg')
   hr
 
