--- a/src/pug/blog/report_15.pug
+++ b/src/pug/blog/report_15.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #15
-  +news_header('31 July 2023', 'report_14', '')
+  +news_header('31 July 2023', 'report_14', 'report_16')
 
   h3 New version of 3D models
   p In order to improve the stability of the scroll-wheel and reduce reports about "wobbling", we have re-designed the two parts, so that they fit together more reliably.
