Added HOLD_OVERLAP_LONG to manual

--- a/src/pug/alpakka/manual/dev_profiles.pug
+++ b/src/pug/alpakka/manual/dev_profiles.pug
@@ -18,8 +18,8 @@ block content
   p Actions are either keyboard keys, mouse buttons, gamepad buttons, or special functions (procedures).
   hr
 
-  h3 Button behaviors
-  p Depending on the behavior there may be primary and secondary actions. The possible behaviors are:
+  +h3id('button_mode') Button modes
+  p Depending on the mode there may be primary and secondary actions. The possible behaviors are:
 
   table.manual.hdiv.col3
     tr
@@ -51,7 +51,7 @@ block content
 
   table.manual.hdiv.col3
     tr
-      td: b HOLD_OVERLAP
+      td: b HOLD_OVERLAP #[br] HOLD_OVERLAP_LONG
       th Actions triggered
       th Actions released
     tr
