--- a/src/pug/blog/report_16.pug
+++ b/src/pug/blog/report_16.pug
@@ -5,10 +5,10 @@ block append subtitle
 
 block content
   h2 Progress report #16
-  +news_header('30 August 2023', 'report-15', '')
+  +news_header('31 August 2023', 'report-15', '')
 
   h3 New firmware version with racing profile
-  p In order to better support racing games, #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.91.0-beta2') release f0.91.0-beta2 of the Alpakka firmware]  now supports a new racing profile. This can be activated by pressing the Home-button, in combination with the #[+a('/alpakka/manual/profiles') right-button of the directional pad].
+  p In order to better support racing games, #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.91.0') release f0.91.0 of the Alpakka firmware]  now supports a new racing profile. This can be activated by pressing the Home-button, in combination with the #[+a('/alpakka/manual/profiles') right-button of the directional pad].
   hr
 
   h3 New racing video
