--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -36,6 +36,7 @@ block page
 
         h3 Research
         div
+          +wikilink('wireless_alpakka') Wireless Alpakka
           +wikilink('alphanumeric_input') Alphanumeric input
           +wikilink('gyro_ratcheting') Gyro ratcheting and flick stick
           +wikilink('dual_gyro') Dual gyro
