--- a/src/pug/db/stats.pug
+++ b/src/pug/db/stats.pug
@@ -38,41 +38,42 @@ block append subtitle
       remapMouse: percentage('remapMouse'),
       remapGamepad: percentage('remapGamepad'),
       menuNavMouse: percentage('menuNavMouse'),
-      thumbstickDeadzone: percentage('thumbstickDeadzone'),
-      thumbstickCurve: percentage('thumbstickCurve'),
+      //- thumbstickDeadzone: percentage('thumbstickDeadzone'),
+      //- thumbstickCurve: percentage('thumbstickCurve'),
       fov: percentage('fov'),
       colorBlind: percentage('colorBlind'),
       uiScale: percentage('uiScale'),
       uiLockPlatform: percentage('uiLockPlatform'),
-      framerateLimiter: percentage('framerateLimiter'),
+      //- framerateLimiter: percentage('framerateLimiter'),
       subtitlesDialog: percentage('subtitlesDialog'),
       subtitlesCaption: percentage('subtitlesCaption'),
-      subtitlesOptions: percentage('subtitlesOptions'),
+      subtitlesSize: percentage('subtitlesSize'),
+      subtitlesBackground: percentage('subtitlesBackground'),
       testArea: percentage('testArea'),
       pauseCinematics: percentage('pauseCinematics'),
-      settingsAnytime: percentage('settingsAnytime'),
-      violence: null,
-      sex: null,
-      drugs: null,
-      arachnophobic: null,
-      trypophobic: null,
-      paidCosmetics: percentage('paidCosmetics'),
-      paidExpansions: percentage('paidExpansions'),
-      paidGambling: percentage('paidGambling'),
-      fomoSales: percentage('fomoSales'),
-      payToWin: percentage('payToWin'),
-      fps_tps: {
-        crosshairOptions: percentage('fps_tps.crosshairOptions'),
-        adsSensitivity: percentage('fps_tps.adsSensitivity'),
-        adsHold: percentage('fps_tps.adsHold'),
-        adsToggle: percentage('fps_tps.adsToggle'),
-        sprintHold: percentage('fps_tps.sprintHold'),
-        sprintToggle: percentage('fps_tps.sprintToggle'),
-        crouchHold: percentage('fps_tps.crouchHold'),
-        crouchToggle: percentage('fps_tps.crouchToggle'),
-        walkRunHold: percentage('fps_tps.walkRunHold'),
-        walkRunToggle :percentage('fps_tps.walkRunToggle'),
-      }
+      //- settingsAnytime: percentage('settingsAnytime'),
+      //- violence: null,
+      //- sex: null,
+      //- drugs: null,
+      //- arachnophobic: null,
+      //- trypophobic: null,
+      //- paidCosmetics: percentage('paidCosmetics'),
+      //- paidExpansions: percentage('paidExpansions'),
+      //- paidGambling: percentage('paidGambling'),
+      //- fomoSales: percentage('fomoSales'),
+      //- payToWin: percentage('payToWin'),
+      //- fps_tps: {
+      //-   crosshairOptions: percentage('fps_tps.crosshairOptions'),
+      //-   adsSensitivity: percentage('fps_tps.adsSensitivity'),
+      //-   adsHold: percentage('fps_tps.adsHold'),
+      //-   adsToggle: percentage('fps_tps.adsToggle'),
+      //-   sprintHold: percentage('fps_tps.sprintHold'),
+      //-   sprintToggle: percentage('fps_tps.sprintToggle'),
+      //-   crouchHold: percentage('fps_tps.crouchHold'),
+      //-   crouchToggle: percentage('fps_tps.crouchToggle'),
+      //-   walkRunHold: percentage('fps_tps.walkRunHold'),
+      //-   walkRunToggle :percentage('fps_tps.walkRunToggle'),
+      //- }
     }
   | Stats
 
